--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "dva": "^2.6.0-beta.6",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "os": "^0.1.1",
     "react": "^16.8.6",
     "react-custom-scrollbars": "^4.2.1",
